--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 book:
   title: "Integrated Monitoring in Bird Conservation Regions"
-  date: "4/1/2025"
+  date: "4/3/2025"
   sidebar:
     title: "2024 IMBCR Field Season Report"
     logo: figures/BCR-logo.png
@@ -33,8 +33,9 @@ book:
         - 18-nd.qmd
         - 19-ok.qmd
         - 20-sd.qmd
-        - 21-ut.qmd
-        - 22-wy.qmd
+        - 21-tx.qmd
+        - 22-ut.qmd
+        - 23-wy.qmd
     - part: "Discussion"
       chapters:
         - 23-applications.qmd
